version/0.30/_sources/api/solver/_autosummary/settings/vbm_child.rst.txt
:orphan:

.. _vbm_child:

vbm_child
=========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.vbm_child
    :show-inheritance:

.. rubric:: Attributes

================================================   ================================================================================================================

Attribute                                                                                                                                                   Summary

================================================   ================================================================================================================
:ref:`name <name_2>`                                                                                                                            Name of the object.

:ref:`report_type <report_type>`                                                         The report type; the list may vary on the selected report definition type.

:ref:`vbm_rotor_name <vbm_rotor_name>`                                                                     The name of the rotor to report a VBM quantity for that.

:ref:`report_output_type <report_output_type_1>`       Answer yes if you would like to calculate the output coefficient; otherwise output value will be calculated.

:ref:`output_parameter <output_parameter_1>`                                                     Option to make report definition available as an output parameter.

================================================   ================================================================================================================

.. rubric:: Methods

========================================================   ======================================================================

Method                                                                                                                    Summary

========================================================   ======================================================================
:ref:`create_output_parameter <create_output_parameter>`       Option to make report definition available as an output parameter.

========================================================   ======================================================================

.. rubric:: Included in:

================   ===============================

Parent                                     Summary

================   ===============================
:ref:`vbm <vbm>`       The report definition type.

================   ===============================

